--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pamu">
-        <activity android:name=".OnBoarding_3"></activity>
+        <activity android:name=".Registrasi"></activity>
+        <activity android:name=".Masuk" />
+        <activity android:name=".OnBoarding_3" />
         <activity android:name=".OnBoarding_2" />
-        <activity android:name=".OnBoarding_1" >
+        <activity android:name=".OnBoarding_1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
