--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pamu">
-        <activity android:name=".Registrasi"></activity>
+        <activity android:name=".Tracking"></activity>
+        <activity android:name=".Keranjang" />
+        <activity android:name=".Detail_Pembayaran" />
+        <activity android:name=".OverlayDetailBarang" />
+        <activity android:name=".Detail_Barang" />
+        <activity android:name=".Home" />
+        <activity android:name=".Registrasi" />
         <activity android:name=".Masuk" />
         <activity android:name=".OnBoarding_3" />
         <activity android:name=".OnBoarding_2" />
