--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pamu">
-        <activity android:name=".Tracking"></activity>
-        <activity android:name=".Keranjang" />
-        <activity android:name=".Detail_Pembayaran" />
-        <activity android:name=".OverlayDetailBarang" />
-        <activity android:name=".Detail_Barang" />
-        <activity android:name=".Home" />
-        <activity android:name=".Registrasi" />
-        <activity android:name=".Masuk" />
-        <activity android:name=".OnBoarding_3" />
-        <activity android:name=".OnBoarding_2" />
-        <activity android:name=".OnBoarding_1">
+        <activity android:name=".PermintaanPembeli"></activity>
+        <activity android:name=".Chats" />
+        <activity android:name=".Pesan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Tracking" />
+        <activity android:name=".Keranjang" />
+        <activity android:name=".Detail_Pembayaran" />
+        <activity android:name=".OverlayDetailBarang" />
+        <activity android:name=".Detail_Barang" />
+        <activity android:name=".Home" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".Registrasi" />
+        <activity android:name=".Masuk" />
+        <activity android:name=".OnBoarding_3" />
+        <activity android:name=".OnBoarding_2" />
+        <activity android:name=".OnBoarding_1"/>
+
     </application>
 
 </manifest>
