--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pamu">
-        <activity android:name=".PermintaanPembeli"></activity>
+        <activity android:name=".StatistikPenjualan"></activity>
+        <activity android:name=".laba" />
+        <activity android:name=".PermintaanPembeli" />
         <activity android:name=".Chats" />
-        <activity android:name=".Pesan" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".TokoSelesai" />
+        <activity android:name=".TambahProduk" />
+        <activity android:name=".BuatToko" />
+        <activity android:name=".akun_penjual" />
+        <activity android:name=".AkunPembeli" />
+        <activity android:name=".laporankeuangan_pengeluaran" />
+        <activity android:name=".laporankeuangan_pemasukan" />
+        <activity android:name=".Pesan" />
         <activity android:name=".Tracking" />
         <activity android:name=".Keranjang" />
         <activity android:name=".Detail_Pembayaran" />
@@ -29,7 +32,13 @@
         <activity android:name=".Masuk" />
         <activity android:name=".OnBoarding_3" />
         <activity android:name=".OnBoarding_2" />
-        <activity android:name=".OnBoarding_1"/>
+        <activity android:name=".OnBoarding_1">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
